--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,10 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-/node_modules
+# Node modules
+**/node_modules
+
+# Environment variables
 .env
-dist
+
+# Build output
+**/dist
 dist-ssr
+
+# Local environment
 *.local
 
 # Editor directories and files
@@ -23,5 +30,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-
